# AP_Float

./: .gitignore  CMakeLists.txt  README.md  README.txt
include/AP/: BitArray.hpp  Float.hpp
tests/: test_bitarray.cpp  test_float.cpp
